--- a/student-login/courses.css
+++ b/student-login/courses.css
@@ -2,7 +2,9 @@
   font-family: "Ubuntu", sans-serif;
 }
 .overall {
-  background-image: url("https://pgc.edu/wp-content/uploads/2021/07/Pre-engineering-A.jpg");
+  background: url(./Pre-engineering-A.jpg) no-repeat ;
+  background-size: 100% 100%;
+  /* background-image: url("https://pgc.edu/wp-content/uploads/2021/07/Pre-engineering-A.jpg"); */
   width: 100%;
   height: 955px;
   background-repeat: no-repeat;
@@ -39,23 +41,21 @@
 .left {
   display: flex;
   align-content: flex-start;
+  flex-direction: column;
   width: 20%;
   height: 955px;
   background-color: rgba(248, 242, 242, 0.537);
   border-radius: 10%;
   padding: 50px 20px;
 }
-ul {
-  list-style-type: none;
-  margin-top: 10px;
-}
-li {
+
+a {
   margin-bottom: 10px;
   font-size: larger;
   color: #e9322c;
   font-weight: bold;
 }
-li:hover {
+a:hover {
   text-decoration: underline;
   cursor: pointer;
 }
@@ -71,8 +71,8 @@ s-profile {
 img {
   width: 90px;
   height: 120px;
-  border-radius: 50%;
-  margin: 30px 30px;
+  
+  margin: 30px 35px;
 }
 h4 {
   margin-left: 130px;
